<resources>
    <string name="app_name">Escáner QR</string>
    <string name="title_activity_home">Inicio</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="escanear">Escanear</string>
    <string name="crear_qr">Crear QR</string>
    <string name="created_by">Creada y mantenida por:</string>
    <string name="creator">Carlos Hernández</string>
    <string name="Inicio">Inicio</string>
    <string name="Scan">Escanear</string>
    <string name="Create">Crear</string>
    <string name="ErrorXCamara">No se ha podido abrir la cámara</string>
    <string name="ErrorScanner">Ha ocurrido un error al realizar el escaneo</string>
    <string name="NoPermissionCamera">No se ha permitido el uso de la cámara. La aplicación podría no funcionar correctamente</string>
    <string name="NoPermissionStorage">No se ha permitido el uso del almacenamiento.</string>
    <string name="select_barcode_type">Selecciona un tipo de código</string>
    <string name="enter_data_to_encode">Ingresa tu código a convertir</string>
    <string name="generate_code">Generar código</string>
    <string name="code_image">Código generado</string>
    <string name="text_select_image">(Opcional) Si quieres personalizar el diseño, puedes seleccionar una imagen como relleno.</string>
    <string name="select_image">Seleccionar imagen</string>
    <string name="customization_options">Opciones de personalización</string>
    <string name="code_color">Color del código:</string>
    <string name="change">Cambiar</string>
    <string name="add_logo">Logo central:</string>
    <string name="select">Seleccionar</string>
    <string name="selected_logo_preview">Vista previa del logo seleccionado</string>
    <string name="code_preview">Vista previa</string>
    <string name="code_image_preview">Vista previa del código generado</string>
    <string name="select_code_color">Seleccionar color del código</string>
    <string name="black">Negro</string>
    <string name="blue">Azul</string>
    <string name="red">Rojo</string>
    <string name="green">Verde</string>
    <string name="magenta">Magenta</string>
    <string name="cyan">Cian</string>
    <string name="dark_gray">Gris oscuro</string>
    <string name="error_generating_code">Error al generar el código</string>
    <string name="save">Guardar</string>
    <string name="share">Compartir</string>
    <string name="image_saved_successfully">Imagen guardada correctamente</string>
    <string name="error_saving_image">Error al guardar la imagen</string>
    <string name="share_code">Compartir código QR</string>
    <string name="nombre_del_codigo">Nombre del código</string>

    <string name="create_title">¿Qué quieres crear?</string>
    <string name="quick_qr_title">Código QR rápido</string>
    <string name="quick_qr_desc">Crea un QR simple al instante</string>
    <string name="advanced_title">Avanzado</string>
    <string name="advanced_desc">Personaliza colores, logos y tipos</string>
    <string name="header_new_qr">Genera un código QR de manera rápida</string>
    <string name="basic_info_qr">Configura los datos básicos de tu código</string>
    <string name="content_qr">Contenido (Texto o URL)</string>
    <string name="generar">Generar código</string>

    <string name="generated_success">¡Código Generado!</string>
    <string name="generated_desc">Tu código está listo para ser guardado o compartido</string>
    <string name="auto_save_info">El código se guardará automáticamente en tu historial</string>
    <string name="saved_code">El código se guardará automáticamente en tu historial</string>
    <string name="sharing_code">Tu código está listo para ser guardado o compartido</string>
    <string name="generated_code">¡Código Generado!</string>

    <string name="delete_title">Confirmar eliminación</string>
    <string name="delete_message">¿Estás seguro de que deseas eliminar este código QR? Esta acción no se puede deshacer.</string>
    <string name="delete_positive">Eliminar</string>
    <string name="delete_negative">Cancelar</string>
    <string name="recent_codes">Códigos Recientes</string>
    <string name="no_codes_yet">Aún no has creado códigos</string>

    <string name="advanced_create_title">Creación Avanzada</string>
    <string name="advanced_create_desc">Personaliza cada detalle de tu código</string>
    <string name="code_info_header">Información del código</string>
    <string name="visual_custom_header">Personalización visual</string>
    <string name="change_qr_color">Cambiar Color QR</string>
    <string name="add_center_logo">Agregar Logo Central</string>
    <string name="preview_upper">VISTA PREVIA</string>

    <string name="error_empty_data">Ingresa datos para el QR</string>
    <string name="error_empty_name">Ingresa un nombre para el código</string>
    <string name="error_format_mismatch">El formato para %1$s requiere exactamente %2$d caracteres (tienes %3$d)</string>
    <string name="error_sharing_code">Error al compartir el código</string>

    <string name="title_home">Inicio</string>
    <string name="title_scan">Escanear Código</string>
    <string name="title_create">Crear QR</string>
    <string name="title_advanced_create">Configuración Avanzada</string>
    <string name="title_customize">Personalizar Código</string>
    <string name="verde">Verde</string>
    <string name="azul">Azul</string>
    <string name="rojo">Rojo</string>
    <string name="logo_seleccionado_correctamente">Logo seleccionado correctamente</string>
    <string name="no_results">No se encontraron resultados</string>
    <string name="buscar_codigos">Buscar códigos...</string>
    <string name="mis_codigos">Mis códigos</string>
    <string name="https_github_com_carlitoshv">https://github.com/CarlitosHV</string>
    <string name="ayuda">Ayuda</string>
    <string name="gradient_type">Tipo de degradado</string>
    <string name="flat">Plano</string>
    <string name="diagonal">Diagonal</string>
    <string name="radial">Circular (Centro)</string>
    <string name="select_gradient_color">Color secundario (Degradado)</string>
    <string name="hex">HEX</string>

    <string name="barcode_upca">UPC-A</string>
    <string name="barcode_upce">UPC-E</string>
    <string name="barcode_ean8">EAN-8</string>
    <string name="barcode_ean13">EAN-13</string>
    <string name="barcode_code39">Code 39</string>
    <string name="barcode_code128">Code 128</string>
    <string name="barcode_itf">ITF</string>
    <string name="barcode_codabar">Codabar</string>
    <string name="barcode_qrcode">Código QR</string>
    <string name="default_qr_name">Código_QR</string>
    <string name="mi_codigo_wifi">Mi código WiFi</string>
    <string name="mi_codigo">Mi código</string>

    <string name="scan_result">Resultado del escaneo</string>
    <string name="copy">Copiar</string>
    <string name="open_link">Abrir enlace</string>
    <string name="text_copied">Texto copiado al portapapeles</string>
    <string name="no_favorites_yet">Sin favoritos</string>
    <string name="added_to_favorites">Agregado a favoritos</string>
    <string name="removed_from_favorites">Eliminado de favoritos</string>
    <string name="favorites">Mis favoritos</string>
    <string name="scanned_from_camera">Escaneado desde cámara</string>
    <string name="scanned_from_gallery">Escaneado desde galería</string>
</resources>